--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-datepicker": "^1.7.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-sqlite-storage": "^6.0.1"
   },
